FEAT: Try to find_package Cdep

--- a/.gitignore
+++ b/.gitignore
@@ -25,3 +25,21 @@ lib_cdep
 ### Go Patch ###
 /vendor/
 /Godeps/
+
+### CMake ###
+CMakeLists.txt.user
+CMakeCache.txt
+CMakeFiles
+CMakeScripts
+Testing
+Makefile
+cmake_install.cmake
+install_manifest.txt
+compile_commands.json
+CTestTestfile.cmake
+_deps
+CMakeUserPresets.json
+
+### CMake Patch ###
+# External projects
+*-prefix/
