--- a/examples/basic/CMakeLists.txt
+++ b/examples/basic/CMakeLists.txt
@@ -1,3 +1,5 @@
-cmake_minimum_required(3.11 FATAL_ERROR)
+cmake_minimum_required(VERSION 3.11 FATAL_ERROR)
 
 project(cdep_basic)
+
+find_package(Cdep)
