--- a/examples/basic/CMakeLists.txt
+++ b/examples/basic/CMakeLists.txt
@@ -2,4 +2,5 @@ cmake_minimum_required(VERSION 3.11 FATAL_ERROR)
 
 project(cdep_basic)
 
-find_package(Cdep)
+set(CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} ${PROJECT_SOURCE_DIR})
+include(Cdep)
